test/data/golden/pass/println_var.sv0
fn main() -> i32 {
  let s: string = "hello from var";
  println(s);
  return 0;
}
