test/data/golden/fail/println_non_string.sv0
fn main() -> unit {
  println(42);
}
